# ranodic

./: .gitignore  Cargo.toml  README.md  build.rs  partitions.csv  wokwi.toml
.cargo/: config.toml
.devcontainer/: devcontainer.json
.github/workflows/: rust_ci.yml
ranodic/: Cargo.toml  build.rs
ranodic-riscv/: Cargo.toml  build.rs
ranodic-riscv/.cargo/: config.toml
ranodic-xtensa-esp32/: Cargo.toml  build.rs  rust-toolchain.toml
ranodic-xtensa-esp32/.cargo/: config.toml
ranodic-xtensa-esp32s3/: Cargo.toml  build.rs
ranodic-xtensa-esp32s3/.cargo/: config.toml
ranodic/src/: drawing.rs  entry.rs  forecast.rs  hub75.rs  lib.rs  log.rs  main.sync-conflict-20251225-153707-UF2EUHR.rs  net.rs  nightscout.rs  ntp.rs  rtc.rs  storage.rs  weather.rs
src/: lib.rs
