[package]
edition = "2021"
name = "ranodic"
version = "0.4.7"

[[bin]]
name = "ranodic"
path = "./src/bin/main.rs"

[dependencies]
critical-section = "1.2.0"
defmt = "1.0.1"
embassy-futures = { version = "0.1.2", features = ["defmt"] }
embassy-net = { version = "0.7.1", features = [
  "dhcpv4",
  "medium-ethernet",
  "tcp",
  "udp",
  "dns",
] }
embassy-sync = "0.7.2"
embassy-time = { version = "0.5.0", features = [] }
embedded-graphics = "0.8.1"
embedded-io = { version = "0.7.1", features = [] }
embedded-io-async = { version = "0.7.0", features = [] }
embedded-storage = "0.3.1"
jiff = { version = "0.2.15", default-features = false, features = [
  "alloc",
  "logging",
  "static",
  "static-tz",
  "perf-inline",
] }
reqwless = { version = "0.13.0", default-features = false, features = [
  "alloc",
  "embedded-tls",
] }
serde_json = { version = "1.0.145", default-features = false, features = [
  "alloc",
] }
serde-json-core = { version = "0.6.0", features = ["defmt"] }
sntpc = { version = "0.6.1", default-features = false, features = [
  "embassy-socket",
  "defmt",
] }
static_cell = { version = "2.1.1", features = ["nightly"] }
tinygif = "0.0.4"

[dependencies.embassy-executor]
version = "0.9.1"

## ESP-HAL

[dependencies.esp-hal]
version = "1.0.0-rc.1"
features = ["unstable"]

[dependencies.esp-metadata-generated]
version = "0.2.0"

[dependencies.esp-bootloader-esp-idf]
version = "0.3.0"

[dependencies.esp-println]
version = "0.16.0"

[dependencies.esp-backtrace]
version = "0.18.0"
features = ["panic-handler"]

[dependencies.esp-alloc]
version = "0.9.0"
features = []

[dependencies.esp-storage]
version = "0.8.0"

[dependencies.esp-radio]
version = "0.16.0"
features = ["esp-alloc", "smoltcp", "wifi", "unstable"]

[dependencies.esp-hub75]
version = "0.7.0"

[dependencies.esp-rom-sys]
version = "0.1.1"

[dependencies.esp-rtos]
version = "0.1.1"
features = ["embassy", "esp-radio", "esp-alloc"]

[dependencies.smoltcp]
version = "0.12.0"
default-features = false
features = [
  "medium-ethernet",
  "multicast",
  "proto-dhcpv4",
  "proto-dns",
  "proto-ipv4",
  "socket-dns",
  "socket-icmp",
  "socket-raw",
  "socket-tcp",
  "socket-udp",
]

[profile.dev]
opt-level = "s"

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false


[features]
default = ["esp32c6", "defmt"]
esp32c6 = [
  "esp-backtrace/esp32c6",
  "esp-bootloader-esp-idf/esp32c6",
  "esp-hal/esp32c6",
  "esp-hub75/esp32c6",
  "esp-metadata-generated/esp32c6",
  "esp-println/esp32c6",
  "esp-radio/esp32c6",
  "esp-rtos/esp32c6",
  "esp-storage/esp32c6",
]
defmt = [
  "embassy-executor/defmt",
  "embassy-net/defmt",
  "embassy-time/defmt",
  "embedded-graphics/defmt",
  "embedded-io/defmt",
  "embedded-io-async/defmt",
  "esp-alloc/defmt",
  "esp-backtrace/defmt",
  "esp-bootloader-esp-idf/defmt",
  "esp-println/defmt-espflash",
  "esp-hal/defmt",
  "esp-hub75/defmt",
  "esp-radio/defmt",
  "smoltcp/defmt",
]
# don't care
esp32 = []
esp32c3 = []
esp32h2 = []
esp32s2 = []
esp32s3 = []
