[workspace]
members = [
    "ranodic",
    "ranodic-xtensa-esp32",
    "ranodic-xtensa-esp32s3",
    "ranodic-riscv",
]
resolver = "3"

[profile.dev]
opt-level = "s"

[profile.release]
codegen-units = 1
# debug = 0
# debug = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
# opt-level = 3
overflow-checks = false
