[package]
edition = "2024"
name = "ranodic"
version = "0.7.0"
autobins = false
autoexamples = false
autotests = false
autobenches = false

[lib]

[dependencies]
critical-section = "1.2.0"
defmt = { version = "1.0.1", optional = true }
embassy-futures = { version = "0.1.2", features = [] }
embassy-net = { version = "0.7.1", default-features = false, features = [
  "dhcpv4",
  "dhcpv4-hostname",
  "proto-ipv6",
  "medium-ethernet",
  "tcp",
  "udp",
  "dns",
] }
embassy-sync = "0.7.2"
embassy-time = { version = "0.5.0", default-features = false, features = [] }
embedded-graphics = "0.8.1"
embedded-io = { version = "0.7.1", features = [] }
embedded-io-async = { version = "0.7.0", features = [] }
embedded-storage = "0.3.1"
jiff = { version = "0.2.16", default-features = false, features = [
  "logging",
  "static",
  "static-tz",
  "perf-inline",
] }
chrono = { version = "0.4.42", default-features = false, features = ["alloc"] }

serde_json = { version = "1.0.145", default-features = false, features = [] }
sntpc = { version = "0.7.0", default-features = false, features = [
  "embassy-socket",
  "embassy-socket-ipv6",
] }
static_cell = { version = "2.1.1", features = ["nightly"] }
tinygif = "0.0.4"
heapless = "0.8.0" # smoltcp holds this back
tickv = "2.0.0"
anyhow = { version = "1.0.100", default-features = false }
nourl = "0.1.4"
itertools = { version = "0.14.0", default-features = false, features = [] }
num_enum = { version = "0.7.5", default-features = false }
xtensa-lx = { version = "0.13.0", default-features = false, optional = true }
ds323x = { version = "0.7.0", optional = true }

[dependencies.embassy-executor]
version = "0.9.1"

## ESP-HAL

[dependencies.esp-hal]
version = "1.0.0"
features = ["unstable"]

[dependencies.esp-metadata-generated]
version = "0.3.0"

[dependencies.esp-bootloader-esp-idf]
version = "0.4.0"

[dependencies.esp-println]
version = "0.16.1"

[dependencies.esp-backtrace]
version = "0.18.1"
features = ["panic-handler", "custom-halt"]

[dependencies.esp-alloc]
version = "0.9.0"
features = ["internal-heap-stats"]
optional = true

[dependencies.esp-storage]
version = "0.8.1"

[dependencies.esp-radio]
version = "0.17.0"
features = ["esp-alloc", "smoltcp", "wifi", "unstable"]

[dependencies.esp-hub75]
version = "0.8.0"
features = ["iram"]
# path = "../../esp-hub75"

[dependencies.hub75-framebuffer]
version = "0.6.0"
features = ["esp-hal-dma"]

[dependencies.esp-rom-sys]
version = "0.1.3"

[dependencies.esp-rtos]
version = "0.2.0"
features = ["embassy", "esp-radio", "esp-alloc"]

# [dependencies.esp-mbedtls]
# version = "0.1"
# git = "https://github.com/esp-rs/esp-mbedtls.git"
# features = ["async"]
# optional = true

[dependencies.reqwless]
version = "0.13.0"
default-features = false
features = []
optional = true

[dependencies.nanofish]
version = "0.9.1"
features = ["tls"]
optional = true

[dependencies.embedded-tls]
version = "0.17.0"
default-features = false
features = []            # "webpki"
optional = true

[dependencies.rustls-webpki]
version = "0.103.8"
default-features = false
features = ["ring"]
optional = true

[dependencies.smoltcp]
version = "0.12.0"
default-features = false
features = [
  "medium-ethernet",
  "multicast",
  "proto-dhcpv4",
  "proto-dns",
  "proto-ipv4",
  "proto-ipv6",
  "socket-dns",
  "socket-icmp",
  "socket-raw",
  "socket-tcp",
  "socket-udp",
]

[profile.dev]
opt-level = "s"

[profile.release]
codegen-units = 1
# debug = 0
# debug = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
# opt-level = 3
overflow-checks = false


[features]
default = [
  # "esp32c6",
  # "esp32s3",
  "defmt",
  "selfwire",
  "nanofish",
  "embedded-tls",
  "alloc",
  # "dep:rustls-webpki",
  "watchdog",
  "rtcchip",
]

watchdog = []
timedreset = []

reqwless = ["dep:reqwless"]

# TODO: this pulls in defmt
nanofish = ["dep:nanofish"]

embedded-tls = ["dep:embedded-tls", "reqwless?/embedded-tls", "nanofish?/tls"]

# esp-mbedtls = ["dep:esp-mbedtls"]

# functionally required right now, but also is to track / toggle packages that will alloc
# ideally all statics are const-alloc and the rest is stack
alloc = [
  "smoltcp/alloc",
  "reqwless?/alloc",
  "dep:esp-alloc",
  "itertools/use_alloc",
  "serde_json/alloc",
  "jiff/alloc",
  "embedded-io/alloc",
  "embedded-io-async/alloc",
  "embedded-tls?/alloc",
  "rustls-webpki?/alloc",
]


# defmt: good when you're directly debugging, trash for normal serial logging
defmt = [
  "dep:defmt",
  "embassy-executor/defmt",
  "embassy-futures/defmt",
  "embassy-net/defmt",
  "embassy-time/defmt",
  "embassy-time/defmt-timestamp-uptime",
  "embedded-graphics/defmt",
  "embedded-io/defmt",
  "embedded-io-async/defmt",
  "embedded-tls?/defmt",
  "esp-alloc/defmt",
  "esp-backtrace/defmt",
  "esp-bootloader-esp-idf/defmt",
  "esp-println/defmt-espflash",
  "esp-hal/defmt",
  "esp-hub75/defmt",
  # "esp-mbedtls?/defmt",
  "esp-radio/defmt",
  "esp-storage/defmt",
  "nourl/defmt",
  "reqwless?/defmt",
  "smoltcp/defmt",
  "sntpc/defmt",
  "ds323x?/defmt",
]

# log: good for normal serial logging, trash for when you're directly debugging
log = [
  "embassy-executor/log",
  "embassy-futures/log",
  "embassy-net/log",
  "embassy-time/log",
  # "embedded-graphics/log",
  # "embedded-io/log",
  # "embedded-io-async/log",
  "embedded-tls?/log",
  # "esp-alloc/log",
  "esp-backtrace/println",
  "esp-bootloader-esp-idf/log-04",
  "esp-println/log-04",
  "esp-hal/log-04",
  "esp-hub75/log",
  "esp-radio/log-04",
  # "esp-storage/log",
  # "nourl/log",
  "reqwless?/log",
  "smoltcp/log",
  "sntpc/log",
]

# wiring scheme in source
selfwire = []

# tidbyt
tidbyt = ["esp32"]


esp32 = [
  "esp-backtrace/esp32",
  "esp-bootloader-esp-idf/esp32",
  "esp-hal/esp32",
  "esp-hub75/esp32",
  # "esp-mbedtls?/esp32",
  "esp-metadata-generated/esp32",
  "esp-println/esp32",
  "esp-radio/esp32",
  "esp-rtos/esp32",
  "esp-storage/esp32",
  "dep:xtensa-lx",
]
esp32s3 = [
  "esp-backtrace/esp32s3",
  "esp-bootloader-esp-idf/esp32s3",
  "esp-hal/esp32s3",
  "esp-hub75/esp32s3",
  # "esp-mbedtls?/esp32s3",
  "esp-metadata-generated/esp32s3",
  "esp-println/esp32s3",
  "esp-radio/esp32s3",
  "esp-rtos/esp32s3",
  "esp-storage/esp32s3",
  "dep:xtensa-lx",
]
esp32c6 = [
  "esp-backtrace/esp32c6",
  "esp-bootloader-esp-idf/esp32c6",
  "esp-hal/esp32c6",
  "esp-hub75/esp32c6",
  # "esp-mbedtls?/esp32c6",
  "esp-metadata-generated/esp32c6",
  "esp-println/esp32c6",
  "esp-radio/esp32c6",
  "esp-rtos/esp32c6",
  "esp-storage/esp32c6",
]
esp32h2 = []
esp32s2 = []
esp32c3 = []
whack = []
rtcchip = ["dep:ds323x"]

heapstats = ["esp-alloc?/internal-heap-stats"]
harakiri = []
